--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <header>
     <!-- <img class="sculptgym-logo" src="images/logo/sculptlogo.png"> -->
         <div class="navbar">
-          <img class="sculptgym-logo" src="images/logo/sculptlogo.png">
+          <img class="sculptgym-logo" src="images/Logo/sculptlogo.png">
           <nav class="menu" style="height: 949px;">
             <div class="nav-layer" style="width: 4283.46px; height: 4283.46px; margin-top: -2141.73px; margin-left: -2141.73px;"></div>
             <ul>
