--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Sculpt Gym</title>
         <meta  charset="utf-8"name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -62,7 +63,7 @@
             <ul>
               <li><a href="index.html"><span class="glyphicon glyphicon-home">&nbsp;</span>Home</a></li>
               <li><a href="#about"><span class="glyphicon glyphicon-info-sign">&nbsp;</span>About</a></li>
-              <li><a href="pages/trainers/trainers.html"><span class="glyphicon glyphicon-user">&nbsp;</span>Personal Trainers</a></li>
+              <li><a href="pages/trainers.html"><span class="glyphicon glyphicon-user">&nbsp;</span>Personal Trainers</a></li>
               <li><a href="pages/sucstories.html"><span class="glyphicon glyphicon-book">&nbsp;</span>Sucess Stories</a></li>
               <li><a href="pages/login.html"><span class="glyphicon glyphicon-log-in">&nbsp;</span>Login</a></li>
               <li><a href="pages/signup.html"><span class="glyphicon glyphicon-pencil">&nbsp;</span> Signup</a></li>
@@ -144,18 +145,20 @@
                   </ul>
                 </div>
               </div>
+              <div class="col-sm-4">
+                <section id="about">
+                  <div id="aboutus-part">
+                    <h2 id="About-us-Title">About Us</h2>
+                    <p id="about-us">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<a id="about-us-link" href="https://www.w3schools.com/html/">Learn more.</a></p>
+                  </div>
+                </section>
+              </div>
             </div>
           </div>
         </aside>
       </div>
       <!--End of Container-->
       <div class="container text-center">
-        <section id="about">
-          <div id="aboutus-part">
-            <h2 id="About-us-Title">About Us</h2>
-            <p id="about-us">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<a id="about-us-link" href="https://www.w3schools.com/html/">Learn more.</a></p>
-          </div>
-        </section>
         <section id="fit-quotes">
           <div class="row">
             <div class='col-md-offset-2 col-md-8 text-center'>
