--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -3,7 +3,7 @@
   <head>
     <title>Sculpt Gym</title>
         <meta  charset="utf-8"name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
+        <link rel="icon" href="favicon.ico" type="../image/gif" sizes="16x16">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
