--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -61,7 +61,7 @@
           <ul>
             <li><a href="../index.html"><span class="glyphicon glyphicon-home">&nbsp;</span>Home</a></li>
             <li><a href="#about"><span class="glyphicon glyphicon-info-sign">&nbsp;</span>About</a></li>
-            <li><a href="../pages/trainers/trainers.html"><span class="glyphicon glyphicon-user">&nbsp;</span>Personal Trainers</a></li>
+            <li><a href="../pages/trainers.html"><span class="glyphicon glyphicon-user">&nbsp;</span>Personal Trainers</a></li>
             <li><a href="../pages/sucstories.html"><span class="glyphicon glyphicon-book">&nbsp;</span>Sucess Stories</a></li>
             <li><a href="../pages/login.html"><span class="glyphicon glyphicon-log-in">&nbsp;</span>Login</a></li>
             <li><a href="../pages/signup.html"><span class="glyphicon glyphicon-pencil">&nbsp;</span> Signup</a></li>
@@ -322,8 +322,35 @@
                </div>
             </div><!-- trainer3 end-->
           </div>
-        </div>
+       </di
+
+       v>
+       </div>
+       <div class="left-side">
+         <aside class="Menu-info">
+           <div class="container operating-hour">
+             <div class="row">
+               <div class="col-sm-4">
+                 <div class="business-hours">
+                   <h2 class="title">Hours of Operation</h2>
+                   <ul class="list-unstyled opening-hours">
+                     <li>Sunday <span class="pull-right">5:00AM - 6:00PM</span></li>
+                     <li>Monday <span class="pull-right">5:00AM - 11:00PM</span></li>
+                     <li>Tuesday <span class="pull-right">5:00AM - 11:00PM</span></li>
+                     <li>Wednesday <span class="pull-right">5:00AM - 11:00PM</span></li>
+                     <li>Thursday <span class="pull-right">5:00AM - 11:00PM</span></li>
+                     <li>Friday <span class="pull-right">5:00AM - 11:00PM</span></li>
+                     <li>Saturday <span class="pull-right">5:00AM - 11:00PM</span></li>
+                     <li>Closed <span class="pull-right">All Holidays</span></li>
+                   </ul>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </aside>
+       </div>
       </div>
+    </div>
      <!--End of Container-->
      <footer class="container-fluid text-center">
        <p id="copyright-footer" style="text-align:center;">Copyright&copy; Linner Rivas</p>
