--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -3,7 +3,7 @@
   <head>
     <title>Sculpt Gym</title>
         <meta  charset="utf-8"name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="favicon.ico" type="../image/gif" sizes="16x16">
+        <link rel="icon" href="../favicon.ico" type="../image/gif" sizes="16x16">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -60,7 +60,7 @@
           <div class="nav-layer" style="width: 4283.46px; height: 4283.46px; margin-top: -2141.73px; margin-left: -2141.73px;"></div>
           <ul>
             <li><a href="../index.html"><span class="glyphicon glyphicon-home">&nbsp;</span>Home</a></li>
-            <li><a href="#about"><span class="glyphicon glyphicon-info-sign">&nbsp;</span>About</a></li>
+            <li><a href="../index.html"><span class="glyphicon glyphicon-info-sign">&nbsp;</span>About</a></li>
             <li><a href="../pages/trainers.html"><span class="glyphicon glyphicon-user">&nbsp;</span>Personal Trainers</a></li>
             <li><a href="../pages/sucstories.html"><span class="glyphicon glyphicon-book">&nbsp;</span>Sucess Stories</a></li>
             <li><a href="../pages/login.html"><span class="glyphicon glyphicon-log-in">&nbsp;</span>Login</a></li>
