--- a/pages/signup.html
+++ b/pages/signup.html
@@ -99,8 +99,43 @@
 			</form>
        </div>
     </div>
+    <footer class="container-fluid text-center">
+      <p id="copyright-footer" style="text-align:center;">Copyright&copy; Linner Rivas</p>
+    </footer>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+          window.jQuery || document.write('<script src="http://townsvillepersonalinjurylawyers.com.au/app/themes/macdonnells-law/js/vendor/jquery.min.js"><\/script>')
+    </script>
+    <script src="http://townsvillepersonalinjurylawyers.com.au/app/themes/macdonnells-law/js/bootstrap.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDX5tvSXwosIfrnPKr2Drrz5uU_hcE2No&callback=initMap"></script>
+    <script src="http://townsvillepersonalinjurylawyers.com.au/app/themes/macdonnells-law/js/Townsville Personal Injury Lawyers-custom.js"></script>
+    <link rel='stylesheet' id='cf-front-styles-css' href='http://townsvillepersonalinjurylawyers.com.au/app/plugins/caldera-forms/assets/css/caldera-forms-front.min.css?ver=1.4.6.7' type='text/css' media='all' />
+    <link rel='stylesheet' id='cf-field-styles-css' href='http://townsvillepersonalinjurylawyers.com.au/app/plugins/caldera-forms/assets/css/fields.min.css?ver=1.4.6.7' type='text/css' media='all' />
+    <script type='text/javascript'>
+    /* <![linnernr[ */
+    var twentyseventeenScreenReaderText = {
+      "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
+                "expand": "Expand child menu",
+                "collapse": "Collapse child menu",
+                "icon": "<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"
+            };
+            /* ]]> */
+    </script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/themes/macdonnells-law/assets/js/skip-link-focus-fix.js?ver=1.0'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/themes/macdonnells-law/assets/js/navigation.js?ver=1.0'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/themes/macdonnells-law/assets/js/global.js?ver=1.0'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/themes/macdonnells-law/assets/js/jquery.scrollTo.js?ver=2.1.2'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/wp/wp-includes/js/wp-embed.min.js?ver=4.7.5'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/plugins/caldera-forms/assets/js/jquery.baldrick.min.js?ver=1.4.6.7'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/plugins/caldera-forms/assets/js/ajax-core.min.js?ver=1.4.6.7'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/plugins/caldera-forms/assets/js/fields.min.js?ver=1.4.6.7'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/plugins/caldera-forms/assets/js/parsley.min.js?ver=1.4.6.7'></script>
+    <script type='text/javascript' src='http://townsvillepersonalinjurylawyers.com.au/app/plugins/caldera-forms/assets/js/frontend-script-init.min.js?ver=1.4.6.7'></script>
+  </body>
+  </html>
 
-</body>
-</html>
-<input type="hidden" name="Linner Rivas">
+  <input type="hidden" name="Linner Rivas">
 <!--Linner Rivas-->
